# fastAPI-backend-for-clone-twitter

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 52058f176361_init_migration.py
backend/: config.py  main.py  schemas.py
backend/models/: __init__.py  base.py  db_helper.py  images.py  likes_tweets.py  tweets.py  users.py
backend/routes/: tweets_routes.py  users_rouets.py
backend/services/: medias_services.py  other_services.py  security.py  tweets_services.py  users_services.py
backend/tests/: conftest.py  factories.py  test_routes_tweets.py  test_routes_users.py  test_services_medias.py  test_services_tweets.py  test_services_users.py  test_users.py
static/: index.html
static/js/: app.7c9275be.js  app.7c9275be.js.map
